--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			<p class="p-min p-min2">Praesent nisi sem, bibendum in, ultrices sit amet, euismod sit amet, dui. Donec varius tincidunt nisi. Ut ut sapien. Integer porta. Fusce nibh. Curabitur pellentesque, lectus at volutpat interdum, sem justo placerat elit, eget feugiat est leo tempor quam. Ut quis neque convallis magna consequat molestie. Nullam semper massa eget ligula. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque a nibh.</p>
 			<p class="p-min p-min2">Eget feugiat est leo tempor quam. Ut quis neque convallis magna consequat molestie.</p>
 			<footer>
-				<h1>CODYPRO</h1>
+				<h1>DEIVYS LAREZ</h1>
 			</footer>
 		</div>
 
